cabal-version:       >=1.10

name:                sounding
version:             0.1.0.0
synopsis:            Library for weather thermodynamic analysis
category:            data
bug-reports:         https://github.com/kubaracek/sounding/issues
license-file:        LICENSE
homepage:            https://github.com/kubaracek/sounding
author:              Jakub Racek
maintainer:          me@jakubracek.net
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable sounding
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  exposed-modules:
  hs-source-dirs:
    library
  -- default-extentions:
  ghc-options: -Wall -Werror -Wincomplete-uni-patterns -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths 
  build-depends:       base >=4.12 && <4.13
  default-language:    Haskell2010
